Add shadow layer before last layer. Add blocking layer.

--- a/src/map-editor/client/src/component/map/style.css
+++ b/src/map-editor/client/src/component/map/style.css
@@ -15,3 +15,10 @@
     top: 0;
     left: 0;
 }
+
+#map-last-layer-shadow {
+    width: 100%;
+    height: 100%;
+    background: rgba(1, 1, 1, 0.4);
+    position: absolute;
+}
